<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_menu_height"
    android:orientation="horizontal">

    <com.ubcoin.view.menu.MenuSingleView
        android:id="@+id/menu_item_market"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        custom:MenuItemActiveIcon="@drawable/ic_market_active"
        custom:MenuItemActiveTextColor="@color/menuActiveColor"
        custom:MenuItemInactiveIcon="@drawable/ic_market_inactive"
        custom:MenuItemInactiveTextColor="@color/menuInactiveColor"
        custom:MenuItemText="@string/menu_label_market" />


    <com.ubcoin.view.menu.MenuSingleView
        android:id="@+id/menu_item_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        custom:MenuItemActiveIcon="@drawable/ic_favorite_active"
        custom:MenuItemActiveTextColor="@color/menuActiveColor"
        custom:MenuItemInactiveIcon="@drawable/ic_favorite_inactive"
        custom:MenuItemInactiveTextColor="@color/menuInactiveColor"
        custom:MenuItemText="@string/menu_label_favorites" />


    <com.ubcoin.view.menu.MenuSingleView
        android:id="@+id/menu_item_sell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        custom:MenuItemActiveIcon="@drawable/ic_sell"
        custom:MenuItemActiveTextColor="@color/menuActiveColor"
        custom:MenuItemInactiveIcon="@drawable/ic_sell"
        custom:MenuItemInactiveTextColor="@color/menuInactiveColor"
        custom:MenuItemText="@string/menu_label_sell" />


    <com.ubcoin.view.menu.MenuSingleView
        android:id="@+id/menu_item_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        custom:MenuItemActiveIcon="@drawable/ic_message_active"
        custom:MenuItemActiveTextColor="@color/menuActiveColor"
        custom:MenuItemInactiveIcon="@drawable/ic_message_inactive"
        custom:MenuItemInactiveTextColor="@color/menuInactiveColor"
        custom:MenuItemText="@string/menu_label_messages" />


    <com.ubcoin.view.menu.MenuSingleView
        android:id="@+id/menu_item_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        custom:MenuItemActiveIcon="@drawable/ic_profile_active"
        custom:MenuItemActiveTextColor="@color/menuActiveColor"
        custom:MenuItemInactiveIcon="@drawable/ic_profile_inactive"
        custom:MenuItemInactiveTextColor="@color/menuInactiveColor"
        custom:MenuItemText="@string/menu_label_profile" />

    <com.ubcoin.view.menu.MenuSingleView
        android:id="@+id/menu_item_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        custom:MenuItemActiveIcon="@drawable/ic_sign_active"
        custom:MenuItemActiveTextColor="@color/menuActiveColor"
        custom:MenuItemInactiveIcon="@drawable/ic_sign_inactive"
        custom:MenuItemInactiveTextColor="@color/menuInactiveColor"
        custom:MenuItemText="@string/menu_label_signin" />


</LinearLayout>