<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/have_account_margin"
        android:layout_marginStart="@dimen/have_account_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/have_account_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/we_sent_a_verification_letter"
            android:textColor="@color/inputTextColor" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/header_margin_start"
            android:layout_marginTop="@dimen/have_account_margin"
            android:hint="@string/code"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:textColorHighlight="@color/haveAccountColor"
            app:met_floatingLabel="highlight"
            app:met_textColor="@color/inputTextColor"
            app:met_textColorHint="@color/haveAccountColor" />

        <LinearLayout
            android:id="@+id/llResendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/have_account_margin"
                android:layout_marginTop="@dimen/camera_margin"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/didn_t_get_the_email"
                android:textColor="@color/haveAccountColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/have_account_margin"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/camera_margin"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/resend_it"
                android:textColor="@color/greenMainColor"
                android:textSize="@dimen/have_account_text_size" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/llSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_size"
                android:layout_marginEnd="@dimen/sign_up_margin"
                android:layout_marginStart="@dimen/sign_up_margin"
                android:background="@drawable/rounded_green_filled_transparent_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/send"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sign_up_text_size" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>