<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_margin_start"
        android:hint="@string/amount"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:textColorHighlight="@color/haveAccountColor"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/greenMainColor"
        app:met_textColor="@color/inputTextColor"
        app:met_textColorHint="@color/haveAccountColor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDialogCancel"
            android:layout_toStartOf="@id/btnDialogDone"
            android:layout_width="wrap_content"
            android:background="@android:color/white"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/header_margin_start"
            android:layout_marginEnd="@dimen/header_margin_start"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:textColor="@color/haveAccountColor"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDialogDone"
            android:layout_width="wrap_content"
            android:background="@android:color/white"
            android:layout_marginEnd="@dimen/header_margin_start"
            android:layout_centerVertical="true"
            android:text="@string/done"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            android:textColor="@color/greenMainColor"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>