<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <include layout="@layout/common_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/img_verified" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/successfully_confirmed"
                android:textColor="@android:color/black"
                android:textSize="@dimen/please_verify_text_size" />

            <TextView
                android:id="@+id/txtWeSentLatter"
                android:gravity="center"
                android:textColor="@color/haveAccountColor"
                android:layout_marginTop="@dimen/header_margin_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lets_get_started" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/llClose"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_up_size"
                    android:layout_marginEnd="@dimen/sign_up_margin"
                    android:layout_marginStart="@dimen/sign_up_margin"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/close"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sign_up_text_size"
                    android:background="@drawable/rounded_green_filled_button_smallr" />


            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>